extends Node2D

@export_range(0.1, 5.0, 0.1) var duration := 1.0:
	set(value):
		duration = value
		$Timer.wait_time = duration

@export var loop := false

func level_start() -> void:
	if $SignalExposer.has_input == false:
		start_timer()

func timeout() -> void:
	%Label.modulate = Color.GREEN
	if loop:
		start_timer()

func _process(_delta: float) -> void:
	if $Timer.is_stopped():
		if Global.level_editor_is_playtesting():
			%Label.text = "0.0"
		else:
			%Label.text = str(float(duration)).substr(0, 3)
	else:
		%Label.text = str(float($Timer.time_left)).substr(0, 3)

func start_timer() -> void:
	$Timer.start(duration)
	%Label.modulate = Color.WHITE
